examples/vpc/route.yaml
apiVersion: vpc.huaweicloud.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1alpha1/route
  labels:
    testing.upbound.io/example-name: vpc_route
  name: vpc-route
spec:
  forProvider:
    destination: 192.168.0.0/16
    nexthop: 967dc509-8224-4e0b-96c9-a565663f810c
    type: peering
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: vpc-2
